deployment_green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example_code
  template:
    metadata:
      labels:
        app: example_code
        color: green
    spec:
      containers:
      - name: simple-web
        image: bubri.azurecr.io/simple_web:new
        ports:
        - containerPort: 80
