deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        tag: '1.0.0'
    spec:
      containers:
      - name: simple-web
        image: bubriks/simple_web:1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-1.0.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        tag: '1.0.1'
    spec:
      containers:
      - name: simple-web
        image: bubriks/simple_web:1.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: simple-web
  labels:
    app: simple-web
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: nginx
