katacoda.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: katacoda-grafana
  namespace: istio-system
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
  selector:
    app: grafana
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: prometheus
  name: katacoda-prometheus
  namespace: istio-system
spec:
  ports:
  - name: http-prometheus
    port: 9090
    protocol: TCP
  selector:
    app: prometheus
