service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-web
spec:
  type: LoadBalancer
  selector:
    app: example_code
  ports:
  - port: 80
